# orgweb

./: .gitignore  .orgwebignore  Dockerfile  Makefile  README.md  README.org  pyproject.toml  requirements.txt
org/: Docker.org  Dockerfile  Makefile.org  pyproject.org
org/orgweb/: __init__.org  container.org  main.org  monitor.org  org.org  utils.org
org/resources/: install.org  site-start.org
org/weborg/: __init__.org  container.org  main.org  monitor.org  org.org  utils.org
resources/: install.el  site-start.el
weborg/: container.py  main.py  monitor.py  org.py
