[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [".env",
           "tests*",
           "org"]

[project]
name = "weborg"
version = "0.0.1"
authors = [
  { name="Frederick Giasson", email="fred@fgiasson.com" },
]
description = "CLI Org-Mode Environment for WEB like development without Emacs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "docker",
    "watchdog"
]

[project.urls]
"Homepage" = "https://github.com/fgiasson/weborg"
"Bug Tracker" = "https://github.com/fgiasson/weborg/issues"

[project.scripts]
weborg = "weborg.main:init"